@@ -6,12 +6,17 @@ import com.saxion.proj.tfms.commons.dto.ApiResponse;
 import com.saxion.proj.tfms.commons.model.*;
 import com.saxion.proj.tfms.planner.abstractions.routeServices.ICreateRoute;
 import com.saxion.proj.tfms.planner.dto.*;
-import com.saxion.proj.tfms.planner.dto.routing.model.*;
 import com.saxion.proj.tfms.planner.repository.*;
+import com.saxion.proj.tfms.routing.model.*;
+import com.saxion.proj.tfms.routing.request.VRPRequest;
+import com.saxion.proj.tfms.routing.response.VRPResponse;
+import com.saxion.proj.tfms.routing.service.OptimizeRouting;
 import jakarta.transaction.Transactional;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
 import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -29,14 +34,18 @@ public class CreateRouteHandler implements ICreateRoute {
     private final LocationRepository locationRepository;
     private final RouteStopRepository routeStopRepository;
     private final WarehouseRepository warehouseRepository;
+    private final OptimizeRouting routingOptimizer;
 
+    @Autowired
     public CreateRouteHandler(RouteRepository routeRepository,
                               ParcelRepository parcelRepository,
                               TruckRepository truckRepository,
                               DriverRepository driverRepository,
                               DepotRepository depotRepository,
-                              LocationRepository locationRepository, RouteStopRepository routeStopRepository,
-                              WarehouseRepository warehouseRepository) {
+                              LocationRepository locationRepository,
+                              RouteStopRepository routeStopRepository,
+                              WarehouseRepository warehouseRepository,
+                              @Qualifier("RoutingOptimizer") OptimizeRouting routingOptimizer) {
         this.routeRepository = routeRepository;
         this.parcelRepository = parcelRepository;
         this.truckRepository = truckRepository;
@@ -45,6 +54,7 @@ public class CreateRouteHandler implements ICreateRoute {
         this.locationRepository = locationRepository;
         this.routeStopRepository = routeStopRepository;
         this.warehouseRepository = warehouseRepository;
+        this.routingOptimizer = routingOptimizer;
     }
 
     @Override
@@ -56,10 +66,7 @@ public class CreateRouteHandler implements ICreateRoute {
             return ApiResponse.error("No valid parcels found for the provided IDs.");
         }
 
-        List<Long> invalidStatusParcelIds = selectedParcels.stream()
-                .filter(p -> p.getStatus() != StatusEnum.SCHEDULED)
-                .map(ParcelDao::getId)
-                .collect(Collectors.toList());
+        List<Long> invalidStatusParcelIds = getInvalidStatusParcelIds(selectedParcels);
         if (!invalidStatusParcelIds.isEmpty()) {
             return ApiResponse.error("Only parcels with status 'SCHEDULED' can be planned. Invalid IDs: " + invalidStatusParcelIds);
         }
@@ -68,36 +75,14 @@ public class CreateRouteHandler implements ICreateRoute {
         DepotDao depotEntity = depotRepository.findById(request.getDepot_id())
                 .orElseThrow(() -> new RuntimeException("Depot not found for ID: " + request.getDepot_id()));
 
-        DepotInfo depotInfo = new DepotInfo(
-                depotEntity.getId(),
-                depotEntity.getName(),
-                depotEntity.getLocation() != null ? depotEntity.getLocation().getLatitude() : 0.0,
-                depotEntity.getLocation() != null ? depotEntity.getLocation().getLongitude() : 0.0
-        );
+        DepotInfo depotInfo = getDepotInfo(depotEntity);
 
         //2b. Validate warehouse
         WareHouseDao warehouseEntity = warehouseRepository.findById(request.getWarehouse_id())
                 .orElseThrow(() -> new RuntimeException("Warehouse not found for ID: " + request.getWarehouse_id()));
 
         //3. Prepare VRP parcels
-        List<Parcel> vrpParcels = selectedParcels.stream().map(p -> {
-            Parcel rp = new Parcel();
-            rp.setParcelId(p.getId());
-            rp.setParcelName(p.getName());
-            rp.setVolume(p.getVolume() != null ? p.getVolume() : 0.0);
-            if (p.getWarehouse() != null && p.getWarehouse().getLocation() != null) {
-                rp.setWarehouseLatitude(p.getWarehouse().getLocation().getLatitude());
-                rp.setWarehouseLongitude(p.getWarehouse().getLocation().getLongitude());
-            }
-            if (p.getDeliveryLocation() != null) {
-                rp.setDeliveryLatitude(p.getDeliveryLocation().getLatitude());
-                rp.setDeliveryLongitude(p.getDeliveryLocation().getLongitude());
-            }
-            rp.setRecipientName(p.getRecipientName());
-            rp.setRecipientPhone(p.getRecipientPhone());
-            rp.setDeliveryInstructions(p.getDeliveryInstructions());
-            return rp;
-        }).collect(Collectors.toList());
+        List<Parcel> vrpParcels = getParcels(request, selectedParcels);
 
         if (vrpParcels.isEmpty()) {
             return ApiResponse.error("No valid parcel coordinates found for routing.");
@@ -116,77 +101,14 @@ public class CreateRouteHandler implements ICreateRoute {
             for (WarehouseRoutingResult wr : vrpResponse.getWarehouseRoutingResults()) {
                 if (wr.getTruckRoutes() == null) continue;
 
+                // Returned warehouseId
+                RouteDao savedRoute = new RouteDao();
                 for (TruckRouteInfo tri : wr.getTruckRoutes()) {
                     TruckDao truck = truckRepository.findByPlateNumber(tri.getTruckPlateNumber()).orElse(null);
-
                     // Step 5a: Persist route first
-                    RouteDao route = new RouteDao();
-                    route.setTruck(truck);
-                    route.setDepot(depotEntity);
-                    route.setWarehouse(warehouseEntity);
-                    route.setTotalDistance(Optional.ofNullable(tri.getTotalDistance()).orElse(0L));
-                    route.setTotalTransportTime(Optional.ofNullable(tri.getTotalTransportTime()).orElse(0L));
-                    route.setNote(vrpResponse.getNotes());
-                    route.setStatus(StatusEnum.PLANNED);
-                    route.setStartTime(ZonedDateTime.now());
-                    route.setScheduleDate(ZonedDateTime.now());
-                    route.setDuration(duration);
-                    route = routeRepository.save(route); // persist first
-
-                    // Step 5b: Persist each stop individually
-                    List<RouteStopDao> persistedStops = new ArrayList<>();
-                    int priority = 1;
-
-                    if (tri.getRouteStops() != null) {
-                        for (Stop s : tri.getRouteStops()) {
-                            RouteStopDao stop = new RouteStopDao();
-                            stop.setDescription("Auto-generated stop");
-                            stop.setPriority(priority++);
-                            stop.setDuration(duration);
-                            stop.setStopType(s.getStopType() == null ? StopType.CUSTOMER :
-                                    StopType.valueOf(s.getStopType().name()));
-                            stop.setRoute(route);
-
-                            // Persist location
-                            if (s.getCoordinates() != null) {
-                                double lat = s.getCoordinates().getLatitude();
-                                double lon = s.getCoordinates().getLongitude();
-                                LocationDao location = locationRepository.findByLatitudeAndLongitude(lat, lon)
-                                        .orElseGet(() -> {
-                                            LocationDao loc = new LocationDao();
-                                            loc.setLatitude(lat);
-                                            loc.setLongitude(lon);
-                                            loc.setAddress("Auto-generated");
-                                            loc.setCity("Auto");
-                                            loc.setPostalCode("Auto");
-                                            return locationRepository.save(loc);
-                                        });
-                                stop.setLocation(location);
-                            }
-
-                            // Persist stop first
-                            stop = routeStopRepository.save(stop);
-                            persistedStops.add(stop);
-
-                            final RouteStopDao finalStop = stop;
-                            // Step 5c: Update parcels to reference persisted stop
-                            if (s.getParcelsToDeliver() != null) {
-                                for (Parcel rp : s.getParcelsToDeliver()) {
-                                    parcelRepository.findById(rp.getParcelId()).ifPresent(parcel -> {
-                                        parcel.setStop(finalStop);
-                                        parcel.setStatus(StatusEnum.PLANNED);
-                                        parcelRepository.save(parcel);
-                                        assignedParcelIds.add(parcel.getId());
-                                    });
-                                }
-                            }
-                        }
-                    }
-
-                    // Step 5d: Link stops back to route and update
-                    route.setStops(persistedStops);
-                    routeRepository.save(route);
-                    savedRoutes.add(route);
+                    Long routeId = updateRoute(tri, truck, depotEntity, warehouseEntity, duration, assignedParcelIds);
+                    savedRoute = routeRepository.findById(routeId).orElse(null);
+                    savedRoutes.add(savedRoute);
                 }
             }
         }
@@ -197,8 +119,21 @@ public class CreateRouteHandler implements ICreateRoute {
                 .toList();
 
         //7 Build response DTO
+        GenerateRouteResponseDto responseDto = getGenerateRouteResponseDto(savedRoutes, unassigned);
+
+        return ApiResponse.success(responseDto);
+    }
+
+    private GenerateRouteResponseDto getGenerateRouteResponseDto(List<RouteDao> savedRoutes, List<ParcelDao> unassigned) {
         GenerateRouteResponseDto responseDto = new GenerateRouteResponseDto();
-        responseDto.setAssignRoutes(savedRoutes.stream().map(this::mapRouteToResponse).toList());
+
+        // Map RouteDao → RouteResponseDto
+        List<RouteResponseDto> mappedRoutes = savedRoutes.stream()
+                .map(RouteResponseDto::fromEntity)
+                .collect(Collectors.toList());
+
+        responseDto.setAssignRoutes(mappedRoutes);
+
         responseDto.setUnAssignedRoute(
                 unassigned.stream().map(p -> {
                     RouteResponseDto dto = new RouteResponseDto();
@@ -211,48 +146,129 @@ public class CreateRouteHandler implements ICreateRoute {
                 .stream().map(this::mapTruck).toList());
         responseDto.setDrivers(driverRepository.findByIsAvailableTrue()
                 .stream().map(this::mapDriver).toList());
+        return responseDto;
+    }
 
-        return ApiResponse.success(responseDto);
+    private Long updateRoute(TruckRouteInfo tri, TruckDao truck, DepotDao depotEntity, WareHouseDao warehouseEntity, String duration, Set<Long> assignedParcelIds) {
+
+        RouteDao route = new RouteDao();
+        route.setTruck(truck);
+        route.setDepot(depotEntity);
+        route.setWarehouse(warehouseEntity);
+        route.setTotalDistance(Long.valueOf(Optional.ofNullable(tri.getTotalDistance()).orElse(0)));
+        route.setTotalTransportTime(Optional.ofNullable(tri.getTotalTransportTime()).orElse(0L));
+        route.setNote("");
+        route.setStatus(StatusEnum.PLANNED);
+        route.setStartTime(ZonedDateTime.now());
+        route.setScheduleDate(ZonedDateTime.now());
+        route.setDuration(duration);
+        route = routeRepository.save(route); // persist first
+
+        // Step 5b: Persist each stop individually
+        List<RouteStopDao> persistedStops = new ArrayList<>();
+        int priority = 1;
+
+        if (tri.getRouteStops() != null) {
+            for (Stop s : tri.getRouteStops()) {
+                RouteStopDao stop = new RouteStopDao();
+                stop.setDescription("Auto-generated stop");
+                stop.setPriority(priority++);
+                stop.setDuration(duration);
+                stop.setStopType(s.getStopType() == null ? StopType.CUSTOMER :
+                        StopType.valueOf(s.getStopType().name()));
+                stop.setRoute(route);
+
+                // Persist location
+                if (s.getCoordinates() != null) {
+                    double lat = s.getCoordinates().getLatitude();
+                    double lon = s.getCoordinates().getLongitude();
+
+                    List<LocationDao> matches = locationRepository.findByLatAndLong(lat, lon);
+                    LocationDao location;
+                    if (!matches.isEmpty()) {
+                        location = matches.get(0);  // pick the first match
+                    } else {
+                        location = new LocationDao();
+                        location.setLatitude(lat);
+                        location.setLongitude(lon);
+                        location.setAddress("Auto-generated");
+                        location.setCity("Auto");
+                        location.setPostalCode("Auto");
+                        location = locationRepository.save(location);
+                    }
+                    stop.setLocation(location);
+                }
+
+                // Persist stop first
+                stop = routeStopRepository.save(stop);
+                persistedStops.add(stop);
+
+                final RouteStopDao finalStop = stop;
+                // Step 5c: Update parcels to reference persisted stop
+                if (s.getParcelsToDeliver() != null) {
+                    for (Parcel rp : s.getParcelsToDeliver()) {
+                        parcelRepository.findById(rp.getParcelId()).ifPresent(parcel -> {
+                            parcel.setStop(finalStop);
+                            parcel.setStatus(StatusEnum.PLANNED);
+                            parcelRepository.save(parcel);
+                            assignedParcelIds.add(parcel.getId());
+                        });
+                    }
+                }
+            }
+        }
+
+        // Step 5d: Link stops back to route and update
+        route.setStops(persistedStops);
+        route = routeRepository.save(route);
+
+        return route.getId();
+    }
+
+    private List<Parcel> getParcels(GenerateRouteRequestDto request, List<ParcelDao> selectedParcels) {
+        List<Parcel> vrpParcels = selectedParcels.stream().map(p -> {
+            Parcel rp = new Parcel();
+            rp.setParcelId(p.getId());
+            rp.setParcelName(p.getName());
+            rp.setVolume(p.getVolume() != null ? p.getVolume() : 0.0);
+            if (p.getWarehouse() != null && p.getWarehouse().getLocation() != null) {
+                rp.setWarehouseLatitude(p.getWarehouse().getLocation().getLatitude());
+                rp.setWarehouseLongitude(p.getWarehouse().getLocation().getLongitude());
+            }
+            if (p.getDeliveryLocation() != null) {
+                rp.setDeliveryLatitude(p.getDeliveryLocation().getLatitude());
+                rp.setDeliveryLongitude(p.getDeliveryLocation().getLongitude());
+            }
+            rp.setRecipientName(p.getRecipientName());
+            rp.setWarehouseId(request.getWarehouse_id());
+            rp.setRecipientPhone(p.getRecipientPhone());
+            rp.setDeliveryInstructions(p.getDeliveryInstructions());
+            return rp;
+        }).collect(Collectors.toList());
+        return vrpParcels;
+    }
+
+    private DepotInfo getDepotInfo(DepotDao depotEntity) {
+        DepotInfo depotInfo = new DepotInfo(
+                depotEntity.getId(),
+                depotEntity.getName(),
+                depotEntity.getLocation() != null ? depotEntity.getLocation().getLatitude() : 0.0,
+                depotEntity.getLocation() != null ? depotEntity.getLocation().getLongitude() : 0.0
+        );
+        return depotInfo;
+    }
+
+    private List<Long> getInvalidStatusParcelIds(List<ParcelDao> selectedParcels) {
+        List<Long> invalidStatusParcelIds = selectedParcels.stream()
+                .filter(p -> p.getStatus() != StatusEnum.SCHEDULED)
+                .map(ParcelDao::getId)
+                .collect(Collectors.toList());
+        return invalidStatusParcelIds;
     }
 
     //Stub VRP
     protected VRPResponse callExternalVrpService(VRPRequest vrpRequest) {
-        TruckRouteInfo tri = new TruckRouteInfo();
-        tri.setTruckPlateNumber("TRK-001");
-        tri.setDepotId(vrpRequest.getDepot().getDepotId());
-        tri.setDepotName(vrpRequest.getDepot().getDepotName());
-        tri.setTotalTransportTime(500L);
-        tri.setTotalDistance(8L);
-
-        List<Stop> stops = new ArrayList<>();
-        WarehouseRoutingResult wrr = new WarehouseRoutingResult();
-        if (vrpRequest.getParcels() != null) {
-            for (Parcel p : vrpRequest.getParcels()) {
-                wrr.setGeneratedForWarehouse(p.getWarehouseId());
-                //define coordinates
-                LocationResponseDto loc = new LocationResponseDto();
-                loc.setLatitude(p.getDeliveryLatitude());
-                loc.setLongitude(p.getDeliveryLongitude());
-
-                //define stops
-                Stop stop = new Stop();
-                stop.setCoordinates(loc);
-                stop.setParcelsToDeliver(Collections.singletonList(p));
-                stop.setStopType(StopType.CUSTOMER);
-
-                stops.add(stop);
-            }
-        }
-        tri.setRouteStops(stops);
-        wrr.setTruckRoutes(Collections.singletonList(tri));
-
-        VRPResponse response = new VRPResponse();
-        response.setWarehouseRoutingResults(List.of(wrr));
-        response.setTotalTrucksUsed(1);
-        response.setEsitimatedDistanceInkm(500.0);
-        response.setEstimatedTimeInMinutes(40000);
-        response.setNotes("Default VRP stub");
-        return response;
+        return routingOptimizer.optimize(vrpRequest);
     }
 
     //DTO Mappers
